# SMA-TP1

./: CMakeLists.txt  README.md  start.sh
src/: CMakeLists.txt  main.cpp
src/action/: Action.hpp  CMakeLists.txt
src/agent/: Agent.cpp  Agent.hpp  Banker.cpp  Banker.hpp  Buyer.hpp  CMakeLists.txt  Dummy.cpp  Dummy.hpp  echoc.cpp
src/company/: CMakeLists.txt  Company.hpp
src/market/: CMakeLists.txt  Market.hpp
src/market/client/: CMakeLists.txt  client.cpp
src/market/market_site/: action.js  agent0.js  agent1.js  agent2.js  bi.js  index.html  mm.js  tc.js  te.js  ti.js
src/market/market_site/stock1/: bar.htm  bar.htm~  stock1.txt
src/market/market_site/stock2/: bar.htm  stock1.txt  stock2.txt
src/market/market_site/stock3/: bar.htm  stock3.txt
src/market/market_site/stock4/: bar.htm  stock4.txt
src/market/market_site/stock5/: bar.htm  stock5.txt
src/market/server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  connection.cpp  connection.hpp  header.hpp  init_server_stocks.cpp  init_server_stocks.hpp  mime_types.cpp  mime_types.hpp  posix_main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  win_main.cpp
src/state/: State.hpp
src/wallet/: CMakeLists.txt  Wallet.hpp
